add user auth stuff

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -11,7 +11,7 @@
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="/js/application.js"></script>
 
-  <title>wing-it</title>
+  <title>perudo</title>
 </head>
 <div class="top">
   <nav class="home-nav">
@@ -23,9 +23,9 @@
       <li class="headers"><a href="/sign-up">Sign Up</a></li>
     <% end %>
     <li class="headers"><a href="/">Home</a></li>
-    <li class="logo"><img src="/images/bee.png"> </li> 
+    <li class="logo"><img src="/images/wave.png"> </li> 
     <br>
-    <h1 class="wing-it">wing it</h1>
+    <h1 class="perudo">perudo</h1>
   </nav>
 </div>
 <body class="container">
