--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -10,7 +10,7 @@
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="/js/application.js"></script>
-
+  <link href="https://fonts.googleapis.com/css?family=Robot|Muli" rel="stylesheet">
   <title>perudo</title>
 </head>
 <div class="top">
@@ -25,7 +25,7 @@
     <li class="headers"><a href="/">Home</a></li>
     <li class="logo"><img src="/images/wave.png"> </li> 
     <br>
-    <h1 class="perudo">perudo</h1>
+    <h1 class="roo">R o o</h1>
   </nav>
 </div>
 <body class="container">
