--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -23,12 +23,16 @@
       <li class="headers"><a href="/sign-up">Sign Up</a></li>
     <% end %>
     <li class="headers"><a href="/">Home</a></li>
-    <li class="logo"><img src="/images/wave.png"> </li> 
+    <img src="/images/wave.png"> 
     <br>
-    <h1 class="roo">R o o</h1>
+    <h1 class="roo">R o o </h1>
+    <span class="deets">the holyoke water deets</span> 
+    <br>
+    
   </nav>
 </div>
 <body class="container">
     <%= yield %>
 </body>
+<footer>Enjoy the beach it baby</footer>
 </html>
