--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,16 +1,21 @@
 .container{
-  padding-left: 3%;
-  padding-right: 3%;
+/*  padding-left: 3%;
+  padding-right: 3%;*/
+  margin-top: 0;
   font-family: 'Muli', sans-serif;
 }
 
 .top {
+  margin-left: 3%;
+  margin-right: 3%;
   padding-top: 3%;
-  padding-bottom: 3%;
+  padding-bottom: 2%;
   border-bottom: .5px solid gray
 }
 
 .headers {
+  padding-left: 3%;
+  padding-right: 3%;
   display: inline-block;
   float: right;
   padding-left: 15px;
@@ -26,41 +31,52 @@
   color: #6574bc;
 }
 .roo {
+
   font-family: Courier;
   font-size: 2.8em;
   margin-top: 10px;
-  width: 200px;
-  margin-left: 155px;
-  margin-bottom: 30px;
+  margin-left: 140px;
+  margin-bottom: 0;
 }
 
 img {
+  padding-left: 3%;
+  padding-right: 3%;
   width: 130px;
   float: left;
+  margin: 0;
 }
 .logo {
-  float: left;
-  list-style-type: none;
+  /*float: left;*/
+  /*list-style-type: none;*/
 }
 .error {
   font-size: 1em;
   color: red;
 }
+.deets {
+  font-size: 12pt;
+  font-style: italic;
+  margin-left: 10px;
+}
 .box {
-  width: 180px;
-  height: 100px;
-  background-color: #306ccc;
+  width: 220px;
+  height: 200px;
+  background-color: rgba(69, 157, 183, .3);
   margin-left: 10px;
   margin-top: 20px;
   padding: 5px;
   display: inline-block;
   text-align: center;
-  color: white;
+  color: #2a304f;
   border: none;
   border-radius: 3px;
 }
+.box-0 {
+  margin-left: 0;
+}
 button:hover{
-  box-shadow: 0 0 1px 1px rgba(0, 209, 209, .6);
+  box-shadow: 0 0 .2px .2px rgba(81, 81, 81, .6);
 }
 button:active {
   outline: none;
@@ -68,4 +84,55 @@ button:active {
 .box p {
   font-family: 'Muli', sans-serif;
   font-size: 1.5em;
+}
+.center {
+  margin: 0 auto;
+  width: 689px;
+}
+.image-background {
+  margin-top: 1%;
+  background-image: url('../../images/surf.jpg');
+  background-size: cover;
+  height: 270px;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  margin-bottom: 0;
+}
+.overlay {
+  background: rgba(216, 216, 216,0.35);
+  overflow: hidden;
+  height: 100%;
+  z-index: 2;
+}
+.today {
+  width: 100%;
+  height: 100px;
+  background-color: rgba(216, 216, 216,0.20);
+  margin-top: 0;
+  margin: 0 auto; 
+  padding: 20px;
+}
+.today li {
+  display: inline-block;
+}
+.summary {
+  width: 230px;
+}
+.today-summary {
+  padding-left: 10%;
+  display: inline-block;
+  vertical-align: top;
+}
+.summaries {
+  display: inline-block;
+  padding-left: 5%;
+}
+.today img {
+  height: 50px;
+  width: auto;
+}
+footer {
+  padding: 50px;
+  float: right;
 }
