style and add click for hour by hour

--- a/app/views/hour_by_hour.erb
+++ b/app/views/hour_by_hour.erb
@@ -1,10 +1,27 @@
-<ul>
-  <li><span class="time">12AM : </span><%=@day[0][0]%> to <%= @day[0][2]%> ft</li>
-  <li><span class="time">3AM : </span><%=@day[1][0]%> to <%=@day[1][2]%> ft</li> 
-  <li><span class="time">6AM : </span><%=@day[2][0]%> to <%=@day[2][2]%> ft</li> 
-  <li><span class="time">9AM : </span><%=@day[3][0]%> to <%=@day[3][2]%> ft</li> 
-    <li><span class="time">12PM : </span><%=@day[4][0]%> to <%= @day[4][2]%> ft</li>
-  <li><span class="time">3PM : </span><%=@day[5][0]%> to <%=@day[5][2]%> ft</li> 
-  <li><span class="time">6PM : </span><%=@day[6][0]%> to <%=@day[6][2]%> ft</li> 
-  <li><span class="time">9PM : </span><%=@day[7][0]%> to <%=@day[7][2]%> ft</li> 
-</ul>
+<table class="hour">
+  <% hours = ParseHelper.print_pretty(day)%>
+  <tr>
+    <span><td class="time">12AM </td><td><%=hours[0]%></td></span>
+  </tr>
+  <tr>
+   <span><td class="time">3AM </td><td><%=hours[1]%></td></span>  
+  </tr>
+  <tr>
+    <span><td class="time">6AM </td><td><%=hours[2]%></td></span> 
+  </tr>
+  <tr>  
+    <span><td class="time">9AM </td><td><%=hours[0]%></td></span> 
+  </tr>
+  <tr>
+  <span><td class="time">12PM </td><td><%=hours[0]%></td></span>
+  </tr>
+  <tr>  
+  <span><td class="time">3PM </td><td><%=hours[0]%></td></span> 
+  </tr>
+  <tr>  
+    <span><td class="time">6PM </td><td><%=hours[0]%></td></span> 
+  </tr>
+  <tr>
+    <span><td class="time">9PM </td><td><%=hours[0]%></td></span> 
+  </tr>
+</table>
