--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -34,5 +34,5 @@
 <body class="container">
     <%= yield %>
 </body>
-<footer>Enjoy the beach it baby</footer>
+<footer>Enjoy the beach baby</footer>
 </html>
