--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -14,9 +14,6 @@
       <p class="summary">Sea Temp: <%=@today_temp%> &#x2109;</p>
     </li>
   </ul>
-   
-  
-  
 </div>
 <div class='center'>
   <button class='box box-0' >
@@ -26,14 +23,15 @@
   </button>
   <button class='box box-1'>
     <p>Tomorrow</p>
-    <p>Swell Range: <%=@split_squeezed_days[1][3][0]%>-<%=@split_squeezed_days[1][3][2]%>ft</p>
+    <p>Swell Range: <%=ParseHelper.print_pretty(@split_squeezed_days[1])[3]%></p>
     <p>&nbsp; </p>
   </button>
   <button class='box box-2'>
     <p>The Day After Tomorrow</p>
-    <p>Swell Range: <%=@split_squeezed_days[2][3][0]%>-<%=@split_squeezed_days[1][3][2]%>ft</p>
+    <p>Swell Range: <%=ParseHelper.print_pretty(@split_squeezed_days[2])[3]%></p>
     <p>&nbsp; </p>
   </button>
+<!-- <p>click a day for the hour by hour</p> -->
 </div>
 
 
