--- a/public/css/application.css
+++ b/public/css/application.css
@@ -46,10 +46,7 @@ img {
   float: left;
   margin: 0;
 }
-.logo {
-  /*float: left;*/
-  /*list-style-type: none;*/
-}
+
 .error {
   font-size: 1em;
   color: red;
@@ -60,23 +57,24 @@ img {
   margin-left: 10px;
 }
 .box {
-  width: 220px;
-  height: 200px;
+  width: 30%;
+  height: 40%;
   background-color: rgba(69, 157, 183, .3);
   margin-left: 10px;
   margin-top: 20px;
-  padding: 5px;
+  padding: 10px;
   display: inline-block;
   text-align: center;
   color: #2a304f;
   border: none;
   border-radius: 3px;
+  box-shadow: 0 0 2px .5px rgba(81, 81, 81, .3);
 }
 .box-0 {
   margin-left: 0;
 }
 button:hover{
-  box-shadow: 0 0 .2px .2px rgba(81, 81, 81, .6);
+  box-shadow: 0 0 2px 2px rgba(81, 81, 81, .6);
 }
 button:active {
   outline: none;
@@ -87,12 +85,13 @@ button:active {
 }
 .center {
   margin: 0 auto;
-  width: 689px;
+  width: 80%;
 }
 .image-background {
   margin-top: 1%;
   background-image: url('../../images/surf.jpg');
   background-size: cover;
+  width: 100%;
   height: 270px;
   background-attachment: fixed;
   background-position: center;
@@ -103,6 +102,7 @@ button:active {
   background: rgba(216, 216, 216,0.35);
   overflow: hidden;
   height: 100%;
+  width: 100%;
   z-index: 2;
 }
 .today {
@@ -111,7 +111,8 @@ button:active {
   background-color: rgba(216, 216, 216,0.20);
   margin-top: 0;
   margin: 0 auto; 
-  padding: 20px;
+  padding-top: 3%;
+  padding-bottom: 2%;
 }
 .today li {
   display: inline-block;
@@ -123,6 +124,7 @@ button:active {
   padding-left: 10%;
   display: inline-block;
   vertical-align: top;
+  margin-bottom: 0;
 }
 .summaries {
   display: inline-block;
@@ -131,6 +133,19 @@ button:active {
 .today img {
   height: 50px;
   width: auto;
+}
+.hour{
+  font-family: 'Muli', sans-serif;
+  font-size: 1.5em;
+  margin: 0 auto;
+  padding: 10px;
+}
+.hour td {
+  border: 1px solid black;
+  padding: 5px;
+}
+.time {
+  font-style: bold;
 }
 footer {
   padding: 50px;
